minor font size fix for comment section mobile view

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -205,11 +205,19 @@
       }
       &__text {
         width: 80%;
+        p{
+            font-size: 1.3rem;
+            line-height: 1.8rem;
+            font-weight: 400;
+        }
         &--title {
           display: flex;
           justify-content: space-between;
           align-items: center;
           margin-bottom: 0.8rem;
+          h3{
+            font-weight: 600;
+          }
           p {
             color: var(--mercury-color);
           }
